# sino_scanner

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/sino_scanner/: MainActivity.java
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: home.dart  main.dart
lib/services/: ImagePathHelper.dart  PassportData.dart  ScanResult.dart  sinosecuReader.dart
linux/: CMakeLists.txt
linux/libs/nativeLibs/: CARDINFO.xml  COUNTRY_REGION_INFO.xml  IDCARDV.xml  IDCMRZ2.xml  IDCMRZ3.xml  IDCardConfig.ini  IDCardRecog.cpp  IDCardRecog.d  IDCardRecog.h  IDKClassifier.xml  IDKClassifierMRZ.xml  Judge22_29.xml  Judge2_31.xml  O_0_model.txt  ReadSID.cpp  ReadSID.d  ReadSID.h  SIDHead.wlt  SVMClassfier_ALL.xml  SVMClassfier_ARAB.xml  SVMClassfier_CHN.xml  SVMClassfier_HMT.xml  SVMClassfier_MRZ.xml  SVMClassfier_OTHER.xml  SVMClassfier_SEA.xml  SVMClassfier_SuctionModule.xml  TestArrch64Linux  TestLinux.cpp  TestLinux.d  UserId.txt  WTPPConfig.ini  main_1  utf.h
linux/libs/nativeLibs/IDCARDS/: 10.xml  1000.xml  1001.xml  1002.xml  1003.xml  1004.xml  1005.xml  1006.xml  1007.xml  1008.xml  1009.xml  1011.xml  1017.xml  1018.xml  1019.xml  1021.xml  1022.xml  1023.xml  1024.xml  1025.xml  1026.xml  1027.xml  1029.xml  1030.xml  1031.xml  1032.xml  1039.xml  11.xml  12.xml  14.xml  15.xml  16.xml  17.xml  2.xml  20.xml  2001.xml  2011.xml  21.xml  22.xml  23.xml  (+16 more)
linux/libs/nativeLibs/IDCARDV/: 10.xml  1000.xml  1001.xml  1003.xml  1004.xml  1005.xml  1007.xml  1008.xml  1009.xml  1010.xml  1011.xml  1013.xml  1014.xml  1017.xml  1018.xml  1019.xml  1021.xml  1030.xml  1031.xml  1032.xml  1034.xml  1035.xml  1037.xml  1038.xml  1039.xml  1040.xml  11.xml  12.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  20.xml  2001.xml  2002.xml  2003.xml  2004.xml  (+55 more)
linux/libs/nativeLibs/SVMDevice/101/: SVM_DATA.xml
linux/libs/nativeLibs/SVMDevice/3/: SVM_DATA.xml
linux/libs/nativeLibs/SVMDevice/4/: SVM_DATA.xml
linux/libs/nativeLibs/SVMDevice/5/: SVM_DATA.xml
linux/libs/nativeLibs/SVMDevice/6/: SVM_DATA.xml
linux/libs/nativeLibs/SVMModel/: ara.model  ara.txt
linux/runner/: CMakeLists.txt  my_application.cc
linux/src/: png_wrapper.cpp  png_wrapper.h  sinosecu_wrapper.cpp  sinosecu_wrapper.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
